--- a/Engine/ColorVision.Engine/Properties/Resources.ko.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ko.resx
@@ -2334,4 +2334,43 @@
   <data name="FileNotFound" xml:space="preserve">
     <value>파일을 찾을 수 없습니다</value>
   </data>
+  <data name="ResetDatabasePrompt" xml:space="preserve">
+    <value>데이터베이스를 재설정하시겠습니까?</value>
+  </data>
+  <data name="RelatedItems" xml:space="preserve">
+    <value>관련 항목</value>
+  </data>
+  <data name="Debug" xml:space="preserve">
+    <value>디버그</value>
+  </data>
+  <data name="ToggleList" xml:space="preserve">
+    <value>토글 목록</value>
+  </data>
+  <data name="CmdSendAlready" xml:space="preserve">
+    <value>명령이 전송되었습니다</value>
+  </data>
+  <data name="License" xml:space="preserve">
+    <value>특허</value>
+  </data>
+  <data name="ModifyLicense" xml:space="preserve">
+    <value>라이센스 수정</value>
+  </data>
+  <data name="ConfigurePhysicalCameraBeforeCalibration" xml:space="preserve">
+    <value>보정을 사용하기 전에 해당 물리적 카메라를 구성하세요.</value>
+  </data>
+  <data name="CacheSize" xml:space="preserve">
+    <value>캐시 크기</value>
+  </data>
+  <data name="IntegrationStartTime" xml:space="preserve">
+    <value>적분 시작 시간</value>
+  </data>
+  <data name="IntervalTime" xml:space="preserve">
+    <value>간격 시간</value>
+  </data>
+  <data name="Step" xml:space="preserve">
+    <value>단계</value>
+  </data>
+  <data name="RestartWindowsService" xml:space="preserve">
+    <value>WindowsService를 다시 시작하세요</value>
+  </data>
 </root>
