--- a/UI/ColorVision.Solution/Properties/Resources.fr.resx
+++ b/UI/ColorVision.Solution/Properties/Resources.fr.resx
@@ -270,4 +270,25 @@
   <data name="Terminal" xml:space="preserve">
     <value>Terminal</value>
   </data>
+  <data name="EditSolution" xml:space="preserve">
+    <value>Solutions d'édition</value>
+  </data>
+  <data name="AddFolder" xml:space="preserve">
+    <value>Ajouter un dossier</value>
+  </data>
+  <data name="CopyFullPath" xml:space="preserve">
+    <value>Copiez le chemin complet</value>
+  </data>
+  <data name="NoFound" xml:space="preserve">
+    <value>introuvable</value>
+  </data>
+  <data name="RelateItem" xml:space="preserve">
+    <value>Projets connexes</value>
+  </data>
+  <data name="CopyPath" xml:space="preserve">
+    <value>Copier le chemin</value>
+  </data>
+  <data name="SolutionConfiguration" xml:space="preserve">
+    <value>Configuration de la solution</value>
+  </data>
 </root>
