--- a/UI/ColorVision.Solution/Properties/Resources.ko.resx
+++ b/UI/ColorVision.Solution/Properties/Resources.ko.resx
@@ -270,4 +270,25 @@
   <data name="Terminal" xml:space="preserve">
     <value>단말기</value>
   </data>
+  <data name="EditSolution" xml:space="preserve">
+    <value>편집 솔루션</value>
+  </data>
+  <data name="AddFolder" xml:space="preserve">
+    <value>폴더 추가</value>
+  </data>
+  <data name="CopyFullPath" xml:space="preserve">
+    <value>전체 경로를 복사하세요</value>
+  </data>
+  <data name="NoFound" xml:space="preserve">
+    <value>찾을 수 없음</value>
+  </data>
+  <data name="RelateItem" xml:space="preserve">
+    <value>관련 프로젝트</value>
+  </data>
+  <data name="CopyPath" xml:space="preserve">
+    <value>경로 복사</value>
+  </data>
+  <data name="SolutionConfiguration" xml:space="preserve">
+    <value>솔루션 구성</value>
+  </data>
 </root>
