--- a/UI/ColorVision.Solution/Properties/Resources.zh-Hant.resx
+++ b/UI/ColorVision.Solution/Properties/Resources.zh-Hant.resx
@@ -270,4 +270,25 @@
   <data name="Terminal" xml:space="preserve">
     <value>終端</value>
   </data>
+  <data name="EditSolution" xml:space="preserve">
+    <value>編輯解決方案</value>
+  </data>
+  <data name="AddFolder" xml:space="preserve">
+    <value>新增資料夾</value>
+  </data>
+  <data name="CopyFullPath" xml:space="preserve">
+    <value>複製完整路徑</value>
+  </data>
+  <data name="NoFound" xml:space="preserve">
+    <value>未找到</value>
+  </data>
+  <data name="RelateItem" xml:space="preserve">
+    <value>相關項目</value>
+  </data>
+  <data name="CopyPath" xml:space="preserve">
+    <value>複製路徑</value>
+  </data>
+  <data name="SolutionConfiguration" xml:space="preserve">
+    <value>解決方案配置</value>
+  </data>
 </root>
