--- a/Engine/ColorVision.Engine/Properties/Resources.en.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.en.resx
@@ -2373,4 +2373,7 @@
   <data name="RestartWindowsService" xml:space="preserve">
     <value>Restart WindowsService</value>
   </data>
+  <data name="Spectrometer" xml:space="preserve">
+    <value>Spectrometer</value>
+  </data>
 </root>
