--- a/Engine/ColorVision.Engine/Properties/Resources.ja.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ja.resx
@@ -2373,4 +2373,7 @@
   <data name="RestartWindowsService" xml:space="preserve">
     <value>Windowsサービスを再起動する</value>
   </data>
+  <data name="Spectrometer" xml:space="preserve">
+    <value>分光計</value>
+  </data>
 </root>
