--- a/Engine/ColorVision.Engine/Properties/Resources.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.resx
@@ -2373,4 +2373,7 @@
   <data name="RestartWindowsService" xml:space="preserve">
     <value>重启WindowsService</value>
   </data>
+  <data name="Spectrometer" xml:space="preserve">
+    <value>光谱仪</value>
+  </data>
 </root>
