--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -2374,4 +2374,7 @@
   <data name="RestartWindowsService" xml:space="preserve">
     <value>Перезапустить WindowsService</value>
   </data>
+  <data name="Spectrometer" xml:space="preserve">
+    <value>Спектрометр</value>
+  </data>
 </root>
