--- a/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
@@ -2373,4 +2373,7 @@
   <data name="RestartWindowsService" xml:space="preserve">
     <value>重新啟動WindowsService</value>
   </data>
+  <data name="Spectrometer" xml:space="preserve">
+    <value>光譜儀</value>
+  </data>
 </root>
