--- a/Engine/ColorVision.Engine/Properties/Resources.en.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.en.resx
@@ -166,7 +166,7 @@
     <value>Topic</value>
   </data>
   <data name="Timeout" xml:space="preserve">
-    <value>Timeout</value>
+    <value>Timeout(ms)</value>
   </data>
   <data name="TimeLeft" xml:space="preserve">
     <value>Time Left:</value>
@@ -1818,9 +1818,6 @@
   <data name="ExecutionFailed" xml:space="preserve">
     <value>Execution failed</value>
   </data>
-  <data name="执行失败" xml:space="preserve">
-    <value>Execution failed</value>
-  </data>
   <data name="Opening" xml:space="preserve">
     <value>Opening</value>
   </data>
@@ -2221,7 +2218,7 @@
     <value>Lowest rating</value>
   </data>
   <data name="TimeoutDuration" xml:space="preserve">
-    <value>Timeout</value>
+    <value>Timeout(ms)</value>
   </data>
   <data name="RestoreMysqlAutoFocusTemplateSettings" xml:space="preserve">
     <value>Restore MySQL AutoFocus template settings</value>
@@ -2372,5 +2369,56 @@
   </data>
   <data name="RestartWindowsService" xml:space="preserve">
     <value>Restart WindowsService</value>
+  </data>
+  <data name="SelectExportFileLocation" xml:space="preserve">
+    <value>Select the export file location</value>
+  </data>
+  <data name="DataRetentionDays" xml:space="preserve">
+    <value>Data retention days</value>
+  </data>
+  <data name="DataRetentionHours" xml:space="preserve">
+    <value>Data retention hours</value>
+  </data>
+  <data name="ClearDatabaseOnly" xml:space="preserve">
+    <value>Clear the database only</value>
+  </data>
+  <data name="ConfigArchivedModel_删除本地文件" xml:space="preserve">
+    <value>Delete local files</value>
+  </data>
+  <data name="DeleteLocalFiles" xml:space="preserve">
+    <value>Delete local files</value>
+  </data>
+  <data name="DataBaseConfig" xml:space="preserve">
+    <value>Database configuration</value>
+  </data>
+  <data name="RESTAddress" xml:space="preserve">
+    <value>REST address</value>
+  </data>
+  <data name="ServerMonitorConfig" xml:space="preserve">
+    <value>Service monitoring configuration</value>
+  </data>
+  <data name="MqttConfigId" xml:space="preserve">
+    <value>MQTT Configuration ID</value>
+  </data>
+  <data name="TenantId" xml:space="preserve">
+    <value>Tenant ID</value>
+  </data>
+  <data name="DefaultSavePath" xml:space="preserve">
+    <value>Default save path</value>
+  </data>
+  <data name="IvlCameraProcessing" xml:space="preserve">
+    <value>IVL camera processing</value>
+  </data>
+  <data name="ProcessAndExportCameraDataFromIvlBatchOnly" xml:space="preserve">
+    <value>Process only Camera data from IVL batches and export it.</value>
+  </data>
+  <data name="IvlSpectralProcessing" xml:space="preserve">
+    <value>IVL spectral processing</value>
+  </data>
+  <data name="ProcessAndExportSpectrumDataFromIvlBatchOnly" xml:space="preserve">
+    <value>Process only Spectrum data from IVL batches and export</value>
+  </data>
+  <data name="LightBar" xml:space="preserve">
+    <value>LED strip</value>
   </data>
 </root>
