--- a/Engine/ColorVision.Engine/Properties/Resources.ja.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ja.resx
@@ -1818,9 +1818,6 @@
   <data name="ExecutionFailed" xml:space="preserve">
     <value>実行に失敗しました</value>
   </data>
-  <data name="执行失败" xml:space="preserve">
-    <value>実行に失敗しました</value>
-  </data>
   <data name="Opening" xml:space="preserve">
     <value>オープニング</value>
   </data>
@@ -2372,5 +2369,56 @@
   </data>
   <data name="RestartWindowsService" xml:space="preserve">
     <value>Windowsサービスを再起動する</value>
+  </data>
+  <data name="SelectExportFileLocation" xml:space="preserve">
+    <value>エクスポートファイルの場所を選択する</value>
+  </data>
+  <data name="DataRetentionDays" xml:space="preserve">
+    <value>データ保持日数</value>
+  </data>
+  <data name="DataRetentionHours" xml:space="preserve">
+    <value>データ保持時間</value>
+  </data>
+  <data name="ClearDatabaseOnly" xml:space="preserve">
+    <value>データベースのみをクリアする</value>
+  </data>
+  <data name="ConfigArchivedModel_删除本地文件" xml:space="preserve">
+    <value>ローカルファイルを削除する</value>
+  </data>
+  <data name="DeleteLocalFiles" xml:space="preserve">
+    <value>ローカルファイルを削除する</value>
+  </data>
+  <data name="DataBaseConfig" xml:space="preserve">
+    <value>データベース構成</value>
+  </data>
+  <data name="RESTAddress" xml:space="preserve">
+    <value>RESTアドレス</value>
+  </data>
+  <data name="ServerMonitorConfig" xml:space="preserve">
+    <value>サービス監視構成</value>
+  </data>
+  <data name="MqttConfigId" xml:space="preserve">
+    <value>MQTT構成ID</value>
+  </data>
+  <data name="TenantId" xml:space="preserve">
+    <value>テナントID</value>
+  </data>
+  <data name="DefaultSavePath" xml:space="preserve">
+    <value>デフォルトの保存パス</value>
+  </data>
+  <data name="IvlCameraProcessing" xml:space="preserve">
+    <value>IVLカメラ処理</value>
+  </data>
+  <data name="ProcessAndExportCameraDataFromIvlBatchOnly" xml:space="preserve">
+    <value>IVL バッチからのカメラ データのみを処理してエクスポートします。</value>
+  </data>
+  <data name="IvlSpectralProcessing" xml:space="preserve">
+    <value>IVLスペクトル処理</value>
+  </data>
+  <data name="ProcessAndExportSpectrumDataFromIvlBatchOnly" xml:space="preserve">
+    <value>IVLバッチからスペクトルデータのみを処理してエクスポートする</value>
+  </data>
+  <data name="LightBar" xml:space="preserve">
+    <value>LEDストリップ</value>
   </data>
 </root>
