--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -1819,9 +1819,6 @@
   <data name="ExecutionFailed" xml:space="preserve">
     <value>Выполнение не удалось</value>
   </data>
-  <data name="执行失败" xml:space="preserve">
-    <value>Выполнение не удалось</value>
-  </data>
   <data name="Opening" xml:space="preserve">
     <value>Открытие</value>
   </data>
@@ -2373,5 +2370,56 @@
   </data>
   <data name="RestartWindowsService" xml:space="preserve">
     <value>Перезапустить WindowsService</value>
+  </data>
+  <data name="SelectExportFileLocation" xml:space="preserve">
+    <value>Выберите местоположение файла экспорта</value>
+  </data>
+  <data name="DataRetentionDays" xml:space="preserve">
+    <value>Срок хранения данных</value>
+  </data>
+  <data name="DataRetentionHours" xml:space="preserve">
+    <value>Время хранения данных</value>
+  </data>
+  <data name="ClearDatabaseOnly" xml:space="preserve">
+    <value>Очистить только базу данных</value>
+  </data>
+  <data name="ConfigArchivedModel_删除本地文件" xml:space="preserve">
+    <value>Удалить локальные файлы</value>
+  </data>
+  <data name="DeleteLocalFiles" xml:space="preserve">
+    <value>Удалить локальные файлы</value>
+  </data>
+  <data name="DataBaseConfig" xml:space="preserve">
+    <value>Конфигурация базы данных</value>
+  </data>
+  <data name="RESTAddress" xml:space="preserve">
+    <value>REST-адрес</value>
+  </data>
+  <data name="ServerMonitorConfig" xml:space="preserve">
+    <value>Конфигурация мониторинга услуг</value>
+  </data>
+  <data name="MqttConfigId" xml:space="preserve">
+    <value>Идентификатор конфигурации MQTT</value>
+  </data>
+  <data name="TenantId" xml:space="preserve">
+    <value>Идентификатор арендатора</value>
+  </data>
+  <data name="DefaultSavePath" xml:space="preserve">
+    <value>Путь сохранения по умолчанию</value>
+  </data>
+  <data name="IvlCameraProcessing" xml:space="preserve">
+    <value>Обработка данных с камеры IVL</value>
+  </data>
+  <data name="ProcessAndExportCameraDataFromIvlBatchOnly" xml:space="preserve">
+    <value>Обрабатывайте только данные камер из пакетов IVL и экспортируйте их.</value>
+  </data>
+  <data name="IvlSpectralProcessing" xml:space="preserve">
+    <value>Спектральная обработка ИВЛ</value>
+  </data>
+  <data name="ProcessAndExportSpectrumDataFromIvlBatchOnly" xml:space="preserve">
+    <value>Обрабатывать только данные Spectrum из партий IVL и экспортировать</value>
+  </data>
+  <data name="LightBar" xml:space="preserve">
+    <value>светодиодная лента</value>
   </data>
 </root>
