--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -2422,4 +2422,7 @@
   <data name="LightBar" xml:space="preserve">
     <value>светодиодная лента</value>
   </data>
+  <data name="Spectrometer" xml:space="preserve">
+    <value>Спектрометр</value>
+  </data>
 </root>
