--- a/Engine/ColorVision.Engine/Properties/Resources.en.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.en.resx
@@ -2421,4 +2421,7 @@
   <data name="LightBar" xml:space="preserve">
     <value>LED strip</value>
   </data>
+  <data name="Spectrometer" xml:space="preserve">
+    <value>Spectrometer</value>
+  </data>
 </root>
