--- a/Engine/ColorVision.Engine/Properties/Resources.ja.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ja.resx
@@ -2421,4 +2421,7 @@
   <data name="LightBar" xml:space="preserve">
     <value>LEDストリップ</value>
   </data>
+  <data name="Spectrometer" xml:space="preserve">
+    <value>分光計</value>
+  </data>
 </root>
