--- a/Engine/ColorVision.Engine/Properties/Resources.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.resx
@@ -2421,4 +2421,7 @@
   <data name="LightBar" xml:space="preserve">
     <value>灯条</value>
   </data>
+  <data name="Spectrometer" xml:space="preserve">
+    <value>光谱仪</value>
+  </data>
 </root>
