--- a/Engine/ColorVision.Engine/Properties/Resources.en.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.en.resx
@@ -2376,4 +2376,7 @@
   <data name="Spectrometer" xml:space="preserve">
     <value>Spectrometer</value>
   </data>
+  <data name="EditFilterWheelConfig" xml:space="preserve">
+    <value>Edit filter wheel configuration</value>
+  </data>
 </root>
