--- a/Engine/ColorVision.Engine/Properties/Resources.ja.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ja.resx
@@ -2376,4 +2376,7 @@
   <data name="Spectrometer" xml:space="preserve">
     <value>分光計</value>
   </data>
+  <data name="EditFilterWheelConfig" xml:space="preserve">
+    <value>フィルターホイールの設定を編集する</value>
+  </data>
 </root>
