--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -2377,4 +2377,7 @@
   <data name="Spectrometer" xml:space="preserve">
     <value>Спектрометр</value>
   </data>
+  <data name="EditFilterWheelConfig" xml:space="preserve">
+    <value>Изменить конфигурацию колеса фильтров</value>
+  </data>
 </root>
