--- a/Engine/ColorVision.Engine/Properties/Resources.en.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.en.resx
@@ -2194,7 +2194,7 @@
     <value>stride swing range</value>
   </data>
   <data name="StepSwingRangeDiscription" xml:space="preserve">
-    <value>The second step path. The actual second step path is forwardparam *</value>
+    <value>The second step path. The actual second step path is forwardparam </value>
   </data>
   <data name="StepReductionFactor" xml:space="preserve">
     <value>Step size reduction factor</value>
